Fix: Fixed the aligning of all the tooltips' content to left.

--- a/src/sass/variantcss/_groups.scss
+++ b/src/sass/variantcss/_groups.scss
@@ -1,3 +1,7 @@
+.tooltip .tooltip-inner{
+  text-align: left;
+}
+
 .group-options-link{
   color: #022b36!important;
 }
